--- a/kinh-nghiem/linh-tinh/bep.html
+++ b/kinh-nghiem/linh-tinh/bep.html
@@ -3,7 +3,7 @@
 <head>
 <title>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</title>
 <meta name="description" content="So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân, bếp">
+<meta name="keywords" content="hữu ích, tiết kiệm, cá nhân, bếp">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/bep">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/bep">
 
