--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>Nhắn tin miễn phí với RCS</title>
-<meta name="description" content="Nhắn tin miễn phí với RCS" />
+<meta name="description" content="Nhắn tin miễn phí với RCS, những ưu điểm của RCS, cách cài đặt vào máy." />
 <meta name="keywords" content="RCS, SMS, Android, Google, file">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/RCS">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/RCS">
