--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -189,30 +189,55 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm khi dùng máy-tính, điện-thoại</h1>
 <dl>
   <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
+  <dd>Bảo vệ tài sản trong thời đại số hoá: : tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố.</dd>
   <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
+  <dd>Giữ file trong nhiều máy và nhiều Cloud Storage sao cho an toàn và không bị rối loạn.</dd>
   <dt><a href='privcloudstor'>Hướng-dẫn làm cloud storage server</a></dt>
+  <dd>Hướng dẫn làm cloud storage server cho một nhóm ít người dùng</dd>
   <dt><a href='pi-network'>Tiền-điện-tử Pi</a></dt>
+  <dd>Tiền-điện-tử Pi: một dự án làm ra đồng tiền dùng để giao dịch chung cho toàn thế giới. Bạn hãy nhận tiền Pi mỗi ngày.</dd>
   <dt><a href='cryptocurrency'>Hỏi đáp về Cryptocurrency</a></dt>
+  <dd>Tìm hiểu Cryptocurrency: là gì, giữ như thế nào, trao đổi như thế nào, lợi và hại.</dd>
   <dt><a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
+  <dd>Nhận-xét ban-đầu về vài ví-điện-tử ở Việt-Nam: MoMo, ZaloPay, ViettelPay, GrabPay-by-Moca.</dd>
   <dt><a href='gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a></dt>
+  <dd>Giới thiệu GnuCash, phần mềm để kiểm soát thu chi, quản lý tài sản gia đình.</dd>
   <dt><a href='ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a></dt>
+  <dd>Các phép tính tài chính cần biết trong spreadsheet, áp dụng trong cuộc sống.</dd>
   <dt><a href='roaming'>Wi-Fi Roaming</a></dt>
+  <dd>Lắp mạng Wi-Fi Roaming cho những máy di động trong gia đình khi nhà có nhiều phòng, nhiều tầng.</dd>
   <dt><a href='tien-ich-di-dong'>Tiện-ích-di-động</a></dt>
+  <dd>Những tiện ích của dịch vụ điện thoại di động, tiết kiệm và tiện lợi.</dd>
   <dt><a href='OTT-apps'>OTT app để liên-lạc</a></dt>
+  <dd>So sánh các OTT app dùng để liên lạc trên máy điện thoại</dd>
   <dt><a href='RCS'>Nhắn tin miễn phí với RCS</a></dt>
+  <dd>Nhắn tin miễn phí với RCS, những ưu điểm của RCS, cách cài đặt vào máy.</dd>
   <dt><a href='conferencecall'>Conference Call</a></dt>
+  <dd>Dịch vụ điện thoại hội nghị (Conference Call) của mạng điện thoại di động, 50 người nói chuyện với nhau cùng lúc</dd>
   <dt><a href='tai-khoan-google'>Tạo tài-khoản Google</a></dt>
+  <dd>Cách tạo tài khoản Google với các địa chỉ mail không phải gmail</dd>
   <dt><a href='googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
+  <dd>Vận dụng các khả năng của Google Maps app để việc đi lại nhanh chóng và chính xác</dd>
   <dt><a href='spam-call'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
+  <dd>Chặn những cuộc gọi tiếp thị bằng sự hợp tác trong đám mây</dd>
   <dt><a href='spam'>Những cách chặn spam mail</a></dt>
+  <dd>Phân loại thư spam và Phối hợp các cách chặn thư spam</dd>
   <dt><a href='raspberrypi'>RaspberryPi</a></dt>
+  <dd>Máy tính tí hon RaspberryPi làm trung tâm giải trí gia đình</dd>
   <dt><a href='pin-lithium-ion'>Pin Lithium Ion</a></dt>
+  <dd>Một vài quan sát về Pin Lithium Ion, các đặc điểm của pin</dd>
   <dt><a href='in-sach-nho'>In sách nhỏ</a></dt>
+  <dd>In sách bỏ túi cỡ A7 bằng máy in phun khổ A4</dd>
   <dt><a href='linux'>Vài kinh nghiệm dùng máy Linux</a></dt>
+  <dd>Một vài kinh nghiệm dùng máy Linux: kernel, RAID, LVM, file system</dd>
   <dt><a href='toys'>Home server cũ</a></dt>
+  <dd>"Một server nhiều dịch vụ trong gia đình: chuẩn đồng hồ, trả lời điện thoại và nhận tin nhắn…</dd>
   <dt><a href='oss'>Phần-mềm-mã-nguồn-mở</a></dt>
+  <dd>Phần mềm mã nguồn mở làm được những gì?</dd>
   <dt><a href='phan-mem-tu-do'>Phần-mềm-tự-do</a></dt>
+  <dd>Hỏi và Đáp về phần mềm mã nguồn mở và phần mềm tự do</dd>
   <dt><a href='cashflow'>Trò-chơi học-làm-giàu Cashflow</a></dt>
+  <dd>Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau tự do tài chính.</dd>
 </dl>
   <br>
   <br>
