--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -2,8 +2,8 @@
 <html amp lang="vi">
 <head>
 <title>Cách bảo vệ tài sản trong thời đại số hoá</title>
-<meta name="description" content="Bảo vệ tài sản trong thời đại số hoá" />
-<meta name="keywords" content="hữu ích, ngân hàng, cá nhân, password, OTP">
+<meta name="description" content="Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố." />
+<meta name="keywords" content="hữu ích, ngân hàng, cá nhân, password, OTP, 2FA">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/protect">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect">
 
