--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -3,7 +3,7 @@
 <head>
 <title>Dùng GnuCash để quản lý tài sản gia đình</title>
 <meta name="description" content="Giới thiệu GnuCash, phần mềm để kiểm soát thu chi, quản lý tài sản gia đình" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
+<meta name="keywords" content="hữu ích, tài chính, cá nhân, gnucash, tài sản, thu chi">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/gnucash">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash">
 
