--- a/y-kien/quang-cao-lao.html
+++ b/y-kien/quang-cao-lao.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những ý-kiến đã đăng báo</title>
-<meta name="description" content="Các bài viết của tôi đã được đăng báo Sài Gòn Tiếp Thị và các báo khác" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
-<link rel="alternate" href="https://www.lhboi.name.vn/y-kien/da-len-bao">
-<link rel="canonical" href="https://lehboi.github.io/y-kien/da-len-bao">
+<title>Hãy chặn quảng-cáo có-hại trên Internet</title>
+<meta name="description" content="Mỗi người hãy cùng-nhau góp-sức chặn quảng-cáo có-hại trên Internet bằng cách báo-cáo." />
+<meta name="keywords" content="quảng-cáo, xã-hội, độc-hại, lừa-đảo, Google, Youtube, Facebook">
+<link rel="canonical" href="https://lehboi.github.io/y-kien/quang-cao-lao">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
@@ -14,6 +13,8 @@
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
+
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
 
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -123,6 +124,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <body>
   
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
+  
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
@@ -184,83 +187,65 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Những ý-kiến đã đăng báo</h1>
-<p>Các bài viết đã được đăng trên báo Sài Gòn Tiếp Thị. Sài Gòn Tiếp Thị hồi đó do Ban biên tập khác làm, sau này bị ép giao cho Ban biên tập khác. Web server sgtt hiện nay không giữ những bài trước khi chuyển giao. Các bạn bấm vào tựa bài dưới đây để xem bản lưu trữ của bài báo.</p>
-<div>
-<table class="withborder">
-<tbody>
-<tr>
-<th>Tựa</th>
-<th>Ngày</th>
-</tr>
-<tr>
-<td><a href="https://vnexpress.net/cach-han-che-rui-ro-cua-mot-nha-dau-tu-chung-khoan-20-nam-kinh-nghiem-4351905.html" target='_blank'>Cách hạn chế rủi ro của một nhà đầu tư chứng khoán 20 năm kinh nghiệm</a></td>
-<td>25/9/2021</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20140220103119/https://sgtt.vn/Ban-doc/177400/Chi-nen-lam-man-hinh-giai-tri.html" target='_blank'>TV không có tuner</a></td>
-<td>8/5/2013</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20140122132406/https://sgtt.vn/Tieu-dung/68921/Bat-benh-den-huynh-quang.html" target='_blank'>Bắt bệnh đèn huỳnh quang</a></td>
-<td>11/11/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203526/https://sgtt.vn/Tieu-dung/70074/Ve-sinh-may-lanh.html" target='_blank'>Vệ sinh máy lạnh</a></td>
-<td>18/10/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806204705/https://sgtt.vn/Thoi-su/70375/Tiet-kiem-dien-cho-may-lanh.html" target='_blank'>Tiết kiệm điện cho máy lạnh</a></td>
-<td>9/10/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203546/https://sgtt.vn/Ban-doc/71988/Ban-doc-viet-Doc-ky-huong-dan-truoc-khi-dung.html" target='_blank'>Đọc kỹ hướng dẫn trước khi dùng!</a></td>
-<td>6/9/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203313/https://sgtt.vn/Ban-doc/73071/Ban-doc-viet-Cai-tien-hoat-dong-xe-buyt-de-hut-khach.html" target='_blank'>Cải tiến hoạt động của xe buýt để hút khách</a></td>
-<td>11/8/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203551/https://sgtt.vn/Ban-doc/74335/De-tranh-bi-loai-vi-ghi-nguyen-vong-vao-truong-co-diem-qua-cao.html" target='_blank'>Để tránh bị loại vì ghi nguyện vọng vào trường có điểm quá cao</a></td>
-<td>16/7/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202712/https://sgtt.vn/Ban-doc/76448/Nen-linh-hoat-hon-trong-viec-danh-so-nha.html" target='_blank'>Nên linh hoạt hơn trong việc đánh số nhà</a></td>
-<td>6/6/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203853/https://sgtt.vn/Ban-doc/77934/San-chung-cu-chua-thuc-su-la-“san-dinh-lang”.html" target='_blank'>Sân chung cư chưa thực sự là “sân đình làng”</a></td>
-<td>6/5/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806203318/https://sgtt.vn/Ban-doc/84516/Thieu-tien-le-co-nguyen-nhan-tu-nguoi-dan.html" target='_blank'>Thiếu tiền lẻ: có nguyên nhân từ người dân</a></td>
-<td>23/1/2008</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202717/https://sgtt.vn/Ban-doc/85691/Ban-doc-viet.html" target='_blank'>Quyền của người tiêu dùng: đổi hoặc trả hàng đã mua</a></td>
-<td>25/12/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806202910/https://sgtt.vn/Kinh-te/86506/Khi-doanh-nghiep-duoc-khieu-nai.html" target='_blank'>Khi doanh nghiệp được khiếu nại</a></td>
-<td>23/11/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20130806204630/https://sgtt.vn/Loi-song/90353/Kinh-nghiem-tieu-dung-Chong-nong-tiet-kiem-dien.html" target='_blank'>Kinh nghiệm tiêu dùng: Chống nóng… tiết kiệm điện</a></td>
-<td>3/8/2007</td>
-</tr>
-<tr>
-<td><a href="https://web.archive.org/web/20140208003515/https://sgtt.vn/Ban-doc/93807/Cau-chuyen-tieu-dung-Sua-xe-may-coi-chung-dinh-chau.html" target='_blank'>Sửa xe máy, coi chừng dính… chấu</a></td>
-<td>18/4/2007</td>
-</tr>
-</tbody>
-</table>
-</div>
-<div class="todiscuss">
-Các bài liên quan:
-<br>* <a href="/y-kien/">Những ý kiến khác</a>
-</div>
+    <h1>Hãy chặn quảng-cáo có-hại trên Internet</h1>
+<div class="right">Viết lần đầu trong Tháng Mười, 2021.</div>
+<!-- body here -->
+<p>Có-lẽ các bạn cũng cảm-thấy bực-mình vì vô-số quảng-cáo lừa-đảo hoặc có-hại trong Internet đập vào mắt hàng-giờ. Chúng-ta bị mất thời-giờ với những quảng-cáo đó, nếu không cẩn-thận sẽ bị mất tiền nữa. Chúng-ta hãy chặn những quảng-cáo có-hại đó trong khả năng của mỗi người; làm vậy cũng là giúp người khác tránh bị hại.</p>
+<p>Đầu-nậu quảng-cáo lớn nhất trong Internet là Google. Google là trung-gian, nhận tiền từ những người muốn quảng-cáo, chia tiền đó cho những người có chỗ quảng-cáo trong Internet. Chỗ quảng-cáo trong Internet là một phần diện-tích trang web, hoặc một phần thời-gian trong YouTube video.</p>
 
+<h2>Chặn được những quảng-cáo nào?</h2>
+<p>Google có một chính-sách về những thứ không được quảng-cáo. Dưới đây là một danh-sách rút-gọn:</p>
+<ul>
+<li>Vi-phạm bản-quyền</li>
+<li>Các sản-phẩm hoặc dịch-vụ nguy-hiểm: chất-nổ, vũ-khí, thuốc-lá, chất gây nghiện</li>
+<li>Chăm-sóc sức-khỏe và thuốc</li>
+<li>Cờ-bạc và trò-chơi</li>
+<li>Hàng giả</li>
+<li>Hỗ-trợ thực-hiện hành-vi không trung-thực: tài-liệu giả, dịch-vụ lấy cắp dữ-liệu, nghe trộm điện-thoại, giám-sát người khác</li>
+<li>Nội-dung chính-trị</li>
+<li>Nội-dung khiêu-dâm</li>
+<li>Rượu</li>
+<li>Sản-phẩm và dịch-vụ tài-chính: lãi cao, điều-khoản mập-mờ, quyền chọn nhị-phân, tiền mã-hoá</li>
+<li>Lừa-đảo</li>
+</ul>
+<p>Tại sao chính-sách đã được công-bố rõ-ràng nhưng vẫn có rất nhiều quảng-cáo vi-phạm hiện ra?
+<br>Vì số quảng-cáo quá lớn, Google không thể thuê người duyệt hết số quảng-cáo đó. Google phải dùng máy để duyệt hoặc từ-chối quảng-cáo, mà máy chưa đủ giỏi để phân-biệt chính-xác những thứ nên từ-chối.
+<br>Tình-trạng này cần đến sự-hợp-tác của người xem: báo-cáo những quảng-cáo vi-phạm để người của Google xem lại.</p>
+<p>Khi gặp những quảng-cáo như trong danh-sách trên, các bạn có thể báo cho Google biết.
+<br>Tui thường báo-cáo những quảng-cáo thuốc-gia-truyền, thực-phẩm-chức-năng có tác-dụng thần-kỳ, phòng khám nam-khoa và phụ-khoa, game đánh bài online, mua bán hoá-đơn, cho vay tiền.
+<br>Báo-cáo vậy chứ tui không biết Google sẽ xử như-thế-nào hay nhắm mắt ăn tiền.</p>
+
+<h2>Cách-báo-cáo khi thấy quảng-cáo từ Google</h2>
+<h3>Cách-báo-cáo trong browser trên máy tính</h3>
+<div class="flright"><amp-img alt="Góc trên bên phải ô quảng cáo" src="/images/ads-corner.png" width="63" height="35" layout="responsive"></amp-img></div>
+Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc trên bên phải ô quảng-cáo, trang web <i>About this ad</i> được mở ra.
+<br style="clear:both">
+<div><amp-img alt="About this ad" src="/images/report-ads1.jpg" width="617" height="1078" layout="responsive"></amp-img></div>
+Bấm vào chữ <b>Report this ad</b> trong trang đó, trang web <i>Report an ad</i> được mở ra.
+<div><amp-img alt="Report an ad" src="/images/report-ads2.jpg" width="617" height="1078" layout="responsive"></amp-img></div>
+Chọn một lý-do để báo-cáo.
+<h3>Cách-báo-cáo trên smartphone</h3>
+Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc ô quảng-cáo, ô quảng-cáo đổi thành ba dòng chữ như sau
+<div><amp-img alt="Mobile ad" src="/images/mobile-ads.jpg" width="1077" height="900" layout="responsive"></amp-img></div>
+Bấm vào dòng <b>Tại sao có quảng cáo này?</b> sẽ thấy trang web <i>About this ad</i> giống như phần trên được mở ra.
+<br>Bấm vào chữ <b>Report this ad</b> trong trang đó, trang web <i>Report an ad</i> giống như phần trên được mở ra.
+<br>Chọn một lý-do để báo-cáo.
+<h3>Cách-báo-cáo trong YouTube trong browser</h3>
+<div class="flright"><amp-img alt="Góc dưới bên trái clip quảng cáo" src="/images/ads-corner2.png" width="127" height="23" layout="responsive"></amp-img></div>
+Bấm vào chữ i nhỏ xíu trong vòng tròn ở góc dưới bên trái khung hình quảng cáo, một ô hiện ra như sau.
+<div><amp-img alt="Youtube this ad" src="/images/youtube-why-ads.png" width="835" height="378" layout="responsive"></amp-img></div>
+<br>Bấm vào chữ <b>Report this ad</b> trong ô đó, trang web <i>Report an ad</i> giống như phần trên được mở ra.
+<br>Chọn một lý-do để báo-cáo.
+<h3>Cách-báo-cáo trong YouTube mobile app</h3>
+Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khung-hình quảng-cáo, ba dòng chữ hiện ra, bấm vào dòng <b>Tại sao có quảng cáo này?</b> sẽ thấy ô <i>About this ad</i> giống như phần trên  hiện ra.
+<br>Bấm vào chữ <b>Report this ad</b> trong ô đó, trang web <i>Report an ad</i> giống như phần trên được mở ra.
+<br>Chọn một lý-do để báo-cáo.
+
+<p>Ngoài việc gửi báo-cáo cho Google, tui còn cấm tất cả những quảng-cáo từ người-quảng-cáo đó được xuất-hiện trong trang web này.</p>
+
+<h2>Cách-báo-cáo khi thấy quảng-cáo trong Facebook</h2>
+<p>Facebook có một danh-sách cấm còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tui đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
+<p>Để báo-cáo quảng-cáo vi-phạm trong Facebook mobile app cũng như trong browser thì bấm vào dấu <b>…</b> ở góc trên bên phải ô quảng-cáo rồi chọn mục báo-cáo.</p>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
