--- a/sitemap.html
+++ b/sitemap.html
@@ -247,6 +247,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay nghĩa là gì?</a><br>
     <a href='/y-kien/xa-hoi-thong-tin'>Viễn cảnh: Một xã hội thông tin ở Việt Nam</a><br>
     <a href='/y-kien/bi-mat-doi-tu'>Bàn về Bí-mật đời-tư</a><br>
+    <a href='/y-kien/quang-cao-lao'>Hãy chặn quảng-cáo có-hại trên Internet</a><br>
     <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
     <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
     <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
