edit Facebook section

--- a/y-kien/quang-cao-lao.html
+++ b/y-kien/quang-cao-lao.html
@@ -191,7 +191,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <div class="right">Viết lần đầu trong Tháng Mười, 2021.</div>
 <!-- body here -->
 <p>Có-lẽ các bạn cũng cảm-thấy bực-mình vì vô-số quảng-cáo lừa-đảo hoặc có-hại trong Internet đập vào mắt hàng-giờ. Chúng-ta bị mất thời-giờ với những quảng-cáo đó, nếu không cẩn-thận sẽ bị mất tiền nữa. Chúng-ta hãy chặn những quảng-cáo có-hại đó trong khả năng của mỗi người; làm vậy cũng là giúp người khác tránh bị hại.</p>
-<p>Đầu-nậu quảng-cáo lớn nhất trong Internet là Google. Google là trung-gian, nhận tiền từ những người muốn quảng-cáo, chia tiền đó cho những người có chỗ quảng-cáo trong Internet. Chỗ quảng-cáo trong Internet là một phần diện-tích trang web, hoặc một phần thời-gian trong YouTube video.</p>
+<p>Đầu-nậu quảng-cáo lớn nhất trong Internet là Google. Google là trung-gian, nhận tiền từ những người-quảng-cáo, chia tiền đó cho những người có chỗ quảng-cáo trong Internet. Chỗ quảng-cáo trong Internet là một phần diện-tích trang web, hoặc một phần thời-gian trong YouTube video.</p>
 
 <h2>Chặn được những quảng-cáo nào?</h2>
 <p>Google có một chính-sách về những thứ không được quảng-cáo. Dưới đây là một danh-sách rút-gọn:</p>
@@ -212,7 +212,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Vì số quảng-cáo quá lớn, Google không thể thuê người duyệt hết số quảng-cáo đó. Google phải dùng máy để duyệt hoặc từ-chối quảng-cáo, mà máy chưa đủ giỏi để phân-biệt chính-xác những thứ nên từ-chối.
 <br>Tình-trạng này cần đến sự-hợp-tác của người xem: báo-cáo những quảng-cáo vi-phạm để người của Google xem lại.</p>
 <p>Khi gặp những quảng-cáo như trong danh-sách trên, các bạn có thể báo cho Google biết.
-<br>Tui thường báo-cáo những quảng-cáo thuốc-gia-truyền, thực-phẩm-chức-năng có tác-dụng thần-kỳ, phòng khám nam-khoa và phụ-khoa, game đánh bài online, mua bán hoá-đơn, cho vay tiền.
+<br>Tôi thường báo-cáo những quảng-cáo thuốc-gia-truyền, thực-phẩm-chức-năng có tác-dụng thần-kỳ, phòng khám nam-khoa và phụ-khoa, game đánh bài online, mua bán hoá-đơn, cho vay tiền.
 <br>Báo-cáo vậy chứ tui không biết Google sẽ xử như-thế-nào hay nhắm mắt ăn tiền.</p>
 
 <h2>Cách-báo-cáo khi thấy quảng-cáo từ Google</h2>
@@ -241,10 +241,10 @@ Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khun
 <br>Bấm vào chữ <b>Report this ad</b> trong ô đó, trang web <i>Report an ad</i> giống như phần trên được mở ra.
 <br>Chọn một lý-do để báo-cáo.
 
-<p>Ngoài việc gửi báo-cáo cho Google, tui còn cấm tất cả những quảng-cáo từ người-quảng-cáo đó được xuất-hiện trong trang web này.</p>
+<p>Ngoài việc gửi báo-cáo cho Google, tôi còn cấm tất cả những quảng-cáo từ người-quảng-cáo đó được xuất-hiện trong trang web này.</p>
 
 <h2>Cách-báo-cáo khi thấy quảng-cáo trong Facebook</h2>
-<p>Facebook có một danh-sách cấm còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tui đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
+<p>Trong Facebook cũng có rất nhiều quảng-cáo. Facebook không làm trung-gian như Google, Facebook nhận tiền từ người-quảng-cáo và đặt quảng-cáo trong Facebook. Facebook có một danh-sách cấm còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tôi đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
 <p>Để báo-cáo quảng-cáo vi-phạm trong Facebook mobile app cũng như trong browser thì bấm vào dấu <b>…</b> ở góc trên bên phải ô quảng-cáo rồi chọn mục báo-cáo.</p>
   <hr>
   <div class="footer">
