--- a/y-kien/quang-cao-lao.html
+++ b/y-kien/quang-cao-lao.html
@@ -212,8 +212,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <br>Vì số quảng-cáo quá lớn, Google không thể thuê người duyệt hết số quảng-cáo đó. Google phải dùng máy để duyệt hoặc từ-chối quảng-cáo, mà máy chưa đủ giỏi để phân-biệt chính-xác những thứ nên từ-chối.
 <br>Tình-trạng này cần đến sự-hợp-tác của người xem: báo-cáo những quảng-cáo vi-phạm để người của Google xem lại.</p>
 <p>Khi gặp những quảng-cáo như trong danh-sách trên, các bạn có thể báo cho Google biết.
-<br>Tôi thường báo-cáo những quảng-cáo thuốc-gia-truyền, thực-phẩm-chức-năng có tác-dụng thần-kỳ, phòng khám nam-khoa và phụ-khoa, game đánh bài online, mua bán hoá-đơn, cho vay tiền.
-<br>Báo-cáo vậy chứ tui không biết Google sẽ xử như-thế-nào hay nhắm mắt ăn tiền.</p>
+<br>Tôi thường báo-cáo những quảng-cáo thuốc-gia-truyền, thực-phẩm-chức-năng có tác-dụng thần-kỳ, phòng khám nam-khoa và phụ-khoa, game đánh bài online, mua bán hoá-đơn, cho vay tiền.</p>
 
 <h2>Cách-báo-cáo khi thấy quảng-cáo từ Google</h2>
 <h3>Cách-báo-cáo trong browser trên máy tính</h3>
